logs/stomp_moveit/build.make.041.log.stderr
In file included from /home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/cost_functions/collision_check.cpp:26:0:
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/cost_functions/collision_check.cpp: In member function ‘virtual bool stomp_moveit::cost_functions::CollisionCheck::computeCosts(const MatrixXd&, std::size_t, std::size_t, int, int, Eigen::VectorXd&, bool&)’:
/opt/ros/melodic/include/ros/console.h:348:176: warning: too many arguments for format [-Wformat-extra-args]
     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
                                                                                                                                                                                ^
/opt/ros/melodic/include/ros/console.h:351:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(NULL, __VA_ARGS__)
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/melodic/include/ros/console.h:387:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/melodic/include/ros/console.h:572:35: note: in expansion of macro ‘ROS_LOG_COND’
 #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
                                   ^~~~~~~~~~~~
/opt/ros/melodic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
 #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
                       ^~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/cost_functions/collision_check.cpp:245:9: note: in expansion of macro ‘ROS_INFO’
         ROS_INFO("raw costs:",raw_costs_)
         ^
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/cost_functions/collision_check.cpp:246:9: error: expected ‘;’ before ‘validity’
         validity = false;
         ^~~~~~~~
make[2]: *** [CMakeFiles/stomp_moveit_cost_functions.dir/src/cost_functions/collision_check.cpp.o] Error 1
make[1]: *** [CMakeFiles/stomp_moveit_cost_functions.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_moveit_test.cpp: In function ‘int main(int, char**)’:
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_moveit_test.cpp:180:3: error: ‘success’ was not declared in this scope
   success = (move_group.plan(my_plan) == moveit::planning_interface::MoveItErrorCode::SUCCESS);
   ^~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_moveit_test.cpp:180:3: note: suggested alternatives:
In file included from /usr/include/boost/exception/detail/exception_ptr.hpp:16:0,
                 from /usr/include/boost/exception_ptr.hpp:9,
                 from /usr/include/boost/thread/exceptional_ptr.hpp:10,
                 from /usr/include/boost/thread/future.hpp:25,
                 from /usr/include/boost/thread.hpp:24,
                 from /opt/ros/melodic/include/actionlib/managed_list.h:39,
                 from /opt/ros/melodic/include/actionlib/client/client_helpers.h:47,
                 from /opt/ros/melodic/include/actionlib/client/action_client.h:38,
                 from /opt/ros/melodic/include/actionlib/client/simple_action_client.h:47,
                 from /opt/ros/melodic/include/moveit/move_group_interface/move_group_interface.h:55,
                 from /home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_moveit_test.cpp:37:
/usr/include/boost/exception/detail/clone_current_exception.hpp:34:23: note:   ‘boost::exception_detail::clone_current_exception_result::success’
             int const success=0;
                       ^~~~~~~
In file included from /usr/include/boost/system/system_error.hpp:14:0,
                 from /usr/include/boost/thread/exceptions.hpp:22,
                 from /usr/include/boost/thread/pthread/thread_data.hpp:10,
                 from /usr/include/boost/thread/pthread/condition_variable.hpp:12,
                 from /usr/include/boost/thread/condition_variable.hpp:16,
                 from /usr/include/boost/thread/condition.hpp:13,
                 from /opt/ros/melodic/include/actionlib/client/simple_action_client.h:38,
                 from /opt/ros/melodic/include/moveit/move_group_interface/move_group_interface.h:55,
                 from /home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_moveit_test.cpp:37:
/usr/include/boost/system/error_code.hpp:64:9: note:   ‘success’
         success = 0,
         ^~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_moveit_test.cpp:180:30: error: ‘my_plan’ was not declared in this scope
   success = (move_group.plan(my_plan) == moveit::planning_interface::MoveItErrorCode::SUCCESS);
                              ^~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_moveit_test.cpp:317:28: error: ‘target_pose1’ was not declared in this scope
   move_group.setPoseTarget(target_pose1);
                            ^~~~~~~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_moveit_test.cpp:317:28: note: suggested alternative: ‘start_pose2’
   move_group.setPoseTarget(target_pose1);
                            ^~~~~~~~~~~~
                            start_pose2
make[2]: *** [CMakeFiles/stomp_moveit.dir/src/stomp_moveit_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/stomp_moveit.dir/all] Error 2
make: *** [all] Error 2
